# cpp-robot-state-estimator

./: .gitignore  CMakeLists.txt  Makefile  README.md  estimator_tests  robot_state_estimator
data/: gps_dropout.csv  low_battery_fault.csv  noisy_imu.csv  sample_sensor_data.csv
demo/: demo_commands.md  gps_dropout_terminal_output.txt  low_battery_fault_terminal_output.txt  noisy_imu_terminal_output.txt  sample_sensor_data_state_output.csv  unit_test_output.txt
docs/: architecture.md  interview-talking-points.md  interview-walkthrough.md  job-ready-checklist.md  resume-bullets.md  testing-strategy.md
include/: RunSummary.hpp  SensorHealth.hpp  SensorReading.hpp  StateEstimator.hpp
reports/: gps_dropout_summary.json  gps_dropout_summary.md  low_battery_fault_summary.json  low_battery_fault_summary.md  noisy_imu_summary.json  noisy_imu_summary.md  sample_sensor_data_summary.json  sample_sensor_data_summary.md
scripts/: generate_demo_artifacts.sh
src/: RunSummary.cpp  SensorHealth.cpp  StateEstimator.cpp  main.cpp
tests/: estimator_tests.cpp
